--- a/imports/ui/templates/home.html
+++ b/imports/ui/templates/home.html
@@ -54,7 +54,7 @@
 </template>
 
 <template name="requestedDate">
-	<input type="date" name="requestedDate" id="date" value="{{oldValue}}" required />
+	<input type="text" name="requestedDate" id="daterange" value="{{oldValue}}" required />
 	<button type="submit" class="btn btn-lg btn-primary">Next</button>
 </template>
 
@@ -65,6 +65,13 @@
 		<option value="{{location._id}}" {{oldValueSelected location}}>{{location.name}}</option>
 {{/each}}
 	</select>
+	<button type="submit" class="btn btn-lg btn-primary">Next</button>
+</template>
+
+<template name="requestReason">
+	<textarea class="form-control" name="requestReason" id="reason" placeholder="Reason (optional)">
+		{{oldValue}}
+	</textarea>
 	<button type="submit" class="btn btn-lg btn-primary">Next</button>
 </template>
 
