--- a/imports/ui/sass/layout/_single-request.scss
+++ b/imports/ui/sass/layout/_single-request.scss
@@ -5,30 +5,24 @@
 		margin-bottom: 2em;
 	}
 
-	button {
-		font-size: 1.5em;
-		padding-left: 10px;
-		padding-right: 10px;
-		background-color: $button-background-color;
-		color: $button-text-color;
-		border: 1px solid $input-border-color;
-		border-radius: 3px;
-
-		@include prefix(transition, box-shadow 0.25s ease-out);
-
-		&:hover {
-			box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.75);
-		}
-	}
+	// button {
+	// 	font-size: 1.5em;
+	// 	padding-left: 10px;
+	// 	padding-right: 10px;
+	// 	background-color: $button-background-color;
+	// 	color: $button-text-color;
+	// 	border: 1px solid $input-border-color;
+	// 	border-radius: 3px;
+	// }
 
 	#confirm-request-form,
 	#deny-request-form {
 
-		button {
-			display: block;
-			margin-top: 2em;
-			margin-left: auto;
-			margin-right: auto;
-		}
+		// button {
+		// 	display: block;
+		// 	margin-top: 2em;
+		// 	margin-left: auto;
+		// 	margin-right: auto;
+		// }
 	}
 }
