--- a/imports/ui/sass/layout/_requests.scss
+++ b/imports/ui/sass/layout/_requests.scss
@@ -14,13 +14,6 @@
 		margin-bottom: 1em;
 	}
 
-	.search {
-		background: transparent;
-		border: 1px solid $input-border-color;
-		border-radius: 3px;
-		padding-left: 0.5em;
-	}
-
 	table {
 		width: 100%;
 		margin-bottom: 2em;
@@ -30,60 +23,19 @@
 		}
 	}
 
-	.sick-day-requests {
+	.reactive-table {
 
+		tbody {
+
+			tr {
+				cursor: pointer;
+			}
+		}
 	}
 
-	.i-day-requests {
-
-	}
-
-	.sort-container {
-		float: right;
-	}
-
-	.sort {
-		background-color: $button-background-color;
-		color: $button-text-color;
-		border: 1px solid $input-border-color;
-		border-radius: 3px;
-		padding-left: 8px;
-		padding-right: 8px;
-	}
-
-	.sort:after {
-		display:inline-block;
-		width: 0;
-		height: 0;
-		border-left: 5px solid transparent;
-		border-right: 5px solid transparent;
-		border-bottom: 5px solid transparent;
-		content:"";
-		position: relative;
-		top:-10px;
-		right:-5px;
-	}
-	.sort.asc:after {
-		width: 0;
-		height: 0;
-		border-left: 5px solid transparent;
-		border-right: 5px solid transparent;
-		border-top: 5px solid $button-text-color;
-		content:"";
-		position: relative;
-		top:4px;
-		right:-5px;
-	}
-	.sort.desc:after {
-		width: 0;
-		height: 0;
-		border-left: 5px solid transparent;
-		border-right: 5px solid transparent;
-		border-bottom: 5px solid $button-text-color;
-		content:"";
-		position: relative;
-		top:-4px;
-		right:-5px;
+	.close-details-button {
+		display: block;
+		margin: 1em auto;
 	}
 
 	footer {
@@ -105,19 +57,22 @@
 	.request-details-main {
 		position: relative;
 
-		.request-date,
-		.request-location {
+		.date-location-container {
 			font-size: 2em;
+			margin-top: 2em;
+			margin-bottom: 2em;
 		}
 
 		.request-reason {
-			margin-top: 1em;
-			margin-bottom: 1em;
 			font-size: 1.5em;
+			margin-top: 2em;
+			margin-bottom: 2em;
 		}
 
 		.id-time-container {
 			font-size: 1.1em;
+			margin-top: 2em;
+			margin-bottom: 2em;
 		}
 	}
 
@@ -131,6 +86,11 @@
 					display: block;
 					margin-left: auto;
 					margin-right: auto;
+				}
+
+				p {
+					margin-top: 1em;
+					margin-bottom: 1em;
 				}
 			}
 		}
