--- a/imports/ui/templates/requests.html
+++ b/imports/ui/templates/requests.html
@@ -143,7 +143,7 @@
 	{{#if currentUserAdmin}}{{#if resendConfirmationRequests}}
 		<div class="panel panel-default resend-confirmation-requests-container">
 			<div class="panel-heading">
-				<h1 class="panel-title">Resend Confirmation Requests</h1>
+				<h1 class="panel-title">Resend Confirmation Requests <button type="button" class="close" aria-label="Close" id="close-resend-confirmation-requests"><span aria-hidden="true">&times;</span></button></h1>
 			</div>
 			<div class="panel-body">
 				<form id="resend-confirmation-requests-form">
