Add approval note and ability to edit it afterward

--- a/imports/ui/sass/layout/_requests.scss
+++ b/imports/ui/sass/layout/_requests.scss
@@ -110,6 +110,10 @@
 
 		form {
 
+			&#confirmation-request-note-edit-form {
+				margin-top: 2em;
+			}
+
 			button {
 				display: block;
 				margin: 1em auto 0px;
