Fix incorrect table-cell display

--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -184,7 +184,7 @@
 		}
 
 		input, select, textarea, button {
-			display: table-cell;
+			display: inline-block;
 			vertical-align: middle;
 		}
 
