Hide fellowship things, add i-day reminders

--- a/imports/ui/templates/usersList.html
+++ b/imports/ui/templates/usersList.html
@@ -50,6 +50,7 @@
 				<div class="form-group col-md-2 col-sm-3">
 					<label>
 						Always notify
+						<input type="hidden" name="notify" value="" />
 						<input type="checkbox" id="notify" name="notify" value="true" {{notifySelected user}} />
 					</label>
 				</div>
