--- a/client/main.scss
+++ b/client/main.scss
@@ -35,6 +35,18 @@ $i-day-button-border-color: $md-light-green-600;
 $i-day-background-color: rgba($md-light-green-50, 0.6);
 $i-day-background-color-darker: rgba($md-light-green-100, 0.6);
 
+$meeting-button-color: $md-deep-purple-300;
+$meeting-button-hover-color: $md-deep-purple-200;
+$meeting-button-border-color: $md-deep-purple-600;
+$meeting-background-color: rgba($md-deep-purple-50, 0.6);
+$meeting-background-color-darker: rgba($md-deep-purple-100, 0.6);
+
+$vacation-button-color: $md-amber-300;
+$vacation-button-hover-color: $md-amber-200;
+$vacation-button-border-color: $md-amber-600;
+$vacation-background-color: rgba($md-amber-50, 0.6);
+$vacation-background-color-darker: rgba($md-amber-100, 0.6);
+
 $on-desktop: 768px;
 $medium-desktop: 992px;
 $large-desktop: 1200px;
