--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -16,7 +16,7 @@
 {{#if isFellow}}
 		<a href="//{{residentUrl}}">Resident site</a>
 {{else}}
-		{{!-- <a href="//{{fellowUrl}}">Fellowship site</a>--}}
+		<a href="//{{fellowUrl}}">Fellowship site</a>
 {{/if}}
 		<nav>
 {{#unless routeIs "Home"}}
